istio/internal_istio_ingress_gateway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: "${parameters.app_name}-internal-istio-ingressgateway"
    istio: "${parameters.app_name}-internal-ingressgateway"
    release: istio
  name: "${parameters.app_name}-internal-istio-ingressgateway"
  namespace: istio-system # use the app namespace
spec:
  ports:
  - name: custom-port
    port: 443
    targetPort: 80
  selector:
    app: istio-ingressgateway # USE FQN if I use app-namespace
    istio: ingressgateway  # USE FQN if I use app-namespace
  type: LoadBalancer
  # loadBalancerSourceRanges:
  #   - 172.30.128.0/18 #all viasat VPN
