istio/internal_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: "${parameters.app_name}-internal-gateway" 
  namespace: "${parameters.namespace}"
spec:
  selector:
    istio: "${parameters.app_name}-internal-ingressgateway" # use a custom 'gateway controller'
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
