istio/virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: "${parameters.app_name}-virtual-service"
  namespace: "${parameters.namespace}"
spec:
  hosts:
  - "*"
  gateways:
  # - istio-ingressgateway.istio-system.svc.cluster.local # External Load balancer FQN
  - "${parameters.app_name}-internal-gateway" 
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: "${parameters.app_name}"
        port:
          number: 80
